
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






struct sockaddr_in {int dummy; } ;


 int close (int) ;
 int exit (int) ;
 int openSocket (struct sockaddr_in*,char*) ;
 int printf (char*,...) ;
 int sendRCPT2 (int) ;
 int strcpy (char*,char*) ;

int main (int argc, char *argv[])
{
    char hostIPaddr[80], *cc, *pfft;
    int sd = 0;
    struct sockaddr_in si;

    printf("You can use ONLY for YOUR Messaging Server 3.6\n");
    if (argc != 2) {
        printf("Usage: %s IPaddress \n",argv[0]);
        exit(1);
    } else
        strcpy (hostIPaddr, argv[1]);

    sd = openSocket(&si,hostIPaddr);

    if (sd < 1) {
        printf("failed!\n");
        exit(-1);
    }

    sendRCPT2( sd );
    close (sd);

    exit(0);
}
